# argentum

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: cmake.yml
source/: main.cpp
source/api/: sumup.cpp  sumup.h
source/data/: transaction.cpp  transaction.h  transactions_model.cpp  transactions_model.h
source/ui/: settings_window.cpp  settings_window.h  timeline_window.cpp  timeline_window.h  transaction_list_window.cpp  transaction_list_window.h  window.cpp  window.h
source/util/: enum.h  error.cpp  error.h  flavor.cpp  flavor.h
